[gd_scene load_steps=34 format=3 uid="uid://byl86bdg2utxs"]

[ext_resource type="Script" path="res://script/ui/pause_menu/sound_test.gd" id="1_xlgej"]
[ext_resource type="Script" path="res://script/resource/sound_resource.gd" id="2_8c4g6"]
[ext_resource type="Texture2D" uid="uid://duemcbgcobylk" path="res://asset/2d/ui/pause/tile.png" id="2_ew2d7"]
[ext_resource type="AudioStream" uid="uid://d1g1osousca16" path="res://music/garalina.ogg" id="3_uo04t"]
[ext_resource type="Texture2D" uid="uid://c8kl7o0m4sa4j" path="res://asset/2d/ui/pause/sound_test_text.png" id="3_vpd3f"]
[ext_resource type="Texture2D" uid="uid://dlqqqj582qfrn" path="res://asset/2d/ui/pause/sound_test_icon.png" id="4_cdkrl"]
[ext_resource type="AudioStream" uid="uid://cxqsh40sckwcr" path="res://music/petscop.ogg" id="4_yhl61"]
[ext_resource type="Texture2D" uid="uid://1rnjwjynhhtu" path="res://asset/2d/ui/pause/sound_test_box.png" id="5_5rigd"]
[ext_resource type="AudioStream" uid="uid://r6rrqiroxswt" path="res://sfx/pets/care_uh_oh.wav" id="5_n3yq5"]
[ext_resource type="AudioStream" uid="uid://tmmqurvbcpjg" path="res://sfx/pets/care_bye_bye.wav" id="6_ryclc"]
[ext_resource type="LabelSettings" uid="uid://cb1c82a2dubgn" path="res://resource/theme/font/default.tres" id="6_y6c7e"]
[ext_resource type="Texture2D" uid="uid://bjpl673weodmi" path="res://asset/2d/ui/psx_buttons.png" id="10_gfqmc"]

[sub_resource type="Resource" id="Resource_8o4h0"]
script = ExtResource("2_8c4g6")
sound = ExtResource("3_uo04t")
name = "Garalina"

[sub_resource type="Resource" id="Resource_msuy7"]
script = ExtResource("2_8c4g6")
sound = ExtResource("4_yhl61")
name = "Petscop"

[sub_resource type="Resource" id="Resource_06klt"]
script = ExtResource("2_8c4g6")
sound = ExtResource("5_n3yq5")
name = "Care Says \"Uh-Oh\""

[sub_resource type="Resource" id="Resource_73upo"]
script = ExtResource("2_8c4g6")
sound = ExtResource("6_ryclc")
name = "Care Says \"Bye-Bye\""

[sub_resource type="Gradient" id="Gradient_vm411"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eblja"]
gradient = SubResource("Gradient_vm411")
width = 320
height = 240
fill_from = Vector2(0, 0.5)
fill_to = Vector2(0, 1)
repeat = 2

[sub_resource type="Gradient" id="Gradient_epvyb"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mkq4j"]
gradient = SubResource("Gradient_epvyb")
width = 320
height = 240
fill_from = Vector2(0.5, 0)
repeat = 2

[sub_resource type="Shader" id="Shader_ph333"]
code = "shader_type canvas_item;

uniform float saturation : hint_range(0, 1) = 1.0;

mat4 saturationMatrix( float _saturation ){
    vec3 luminance = vec3( 0.3086, 0.6094, 0.0820 );
    float oneMinusSat = 1.0 - _saturation;
	
    vec3 red = vec3( luminance.x * oneMinusSat );
    red+= vec3(_saturation, 0, 0);
    vec3 green = vec3( luminance.y * oneMinusSat );
    green += vec3( 0,_saturation, 0 );
    vec3 blue = vec3( luminance.z * oneMinusSat );
    blue += vec3( 0, 0,_saturation );
	
    return mat4(vec4(red, 0),vec4(green,0),vec4(blue,0),vec4(0, 0, 0, 1));
}

void fragment() {
	vec4 c = texture(TEXTURE, UV);
	COLOR = saturationMatrix(saturation) * c;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d4vsf"]
shader = SubResource("Shader_ph333")
shader_parameter/saturation = 0.18

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xvgod"]
texture = ExtResource("5_5rigd")
texture_margin_top = 7.0
texture_margin_right = 7.0
texture_margin_bottom = 7.0

[sub_resource type="Animation" id="Animation_8sb45"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxMargin/BoxHBox/SoundTestIcon:material:shader_parameter/saturation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.18]
}

[sub_resource type="Animation" id="Animation_d1hln"]
resource_name = "button_anim"
length = 1.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxMargin/BoxHBox/SoundTestIcon:material:shader_parameter/saturation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f8151"]
_data = {
"RESET": SubResource("Animation_8sb45"),
"button_anim": SubResource("Animation_d1hln")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0ogy0"]
atlas = ExtResource("10_gfqmc")
region = Rect2(34, 68, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqjfq"]
atlas = ExtResource("10_gfqmc")
region = Rect2(170, 68, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_ja363"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ogy0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqjfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ogy0")
}],
"loop": false,
"name": &"pressed",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_463ff"]
atlas = ExtResource("10_gfqmc")
region = Rect2(0, 68, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_adj6w"]
atlas = ExtResource("10_gfqmc")
region = Rect2(136, 68, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgu8l"]
atlas = ExtResource("10_gfqmc")
region = Rect2(0, 68, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_qdkhx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_463ff")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adj6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgu8l")
}],
"loop": false,
"name": &"pressed",
"speed": 5.0
}]

[node name="SoundTest" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlgej")
sounds = Array[ExtResource("2_8c4g6")]([SubResource("Resource_8o4h0"), SubResource("Resource_msuy7"), SubResource("Resource_06klt"), SubResource("Resource_73upo")])

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = ExtResource("2_ew2d7")
stretch_mode = 1

[node name="Gradient2" type="TextureRect" parent="."]
z_as_relative = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_eblja")
stretch_mode = 1

[node name="Gradient3" type="TextureRect" parent="."]
z_as_relative = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_mkq4j")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = ExtResource("3_vpd3f")

[node name="BoxMargin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 280.0
offset_bottom = 75.0
theme_override_constants/margin_left = 39
theme_override_constants/margin_top = 165
theme_override_constants/margin_bottom = 45

[node name="BoxHBox" type="HBoxContainer" parent="BoxMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="SoundTestIcon" type="TextureRect" parent="BoxMargin/BoxHBox"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_d4vsf")
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_cdkrl")
stretch_mode = 3

[node name="BoxPanel" type="Panel" parent="BoxMargin/BoxHBox"]
custom_minimum_size = Vector2(211, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_xvgod")

[node name="SoundName" type="Label" parent="BoxMargin/BoxHBox/BoxPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.0
offset_right = 184.0
offset_bottom = 9.0
grow_vertical = 2
text = "84. Care Says \"Uh-Oh\""
label_settings = ExtResource("6_y6c7e")
vertical_alignment = 2

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="ButtonAnim" type="AnimationPlayer" parent="."]
speed_scale = 3.0
libraries = {
"": SubResource("AnimationLibrary_f8151")
}

[node name="ButtonRight" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(58, 142)
sprite_frames = SubResource("SpriteFrames_ja363")
animation = &"pressed"
frame = 1
frame_progress = 1.0

[node name="ButtonLeft" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(277, 142)
sprite_frames = SubResource("SpriteFrames_qdkhx")

[node name="SubMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
